# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  11 Jun 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.36

  11 Jun 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts:
  Respect real_root for plain dm-crypt without LVM (bug #419965)

  10 Jun 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.35

  10 Jun 2012; Sebastian Pipping <sping@gentoo.org>
  +patches/busybox/1.20.1/1.18.1-openvt.diff,
  +patches/busybox/1.20.1/busybox-1.7.4-signal-hack.patch,
  +patches/busybox/1.20.1/busybox-1.20.1-mdstart.patch:
  Support busybox 1.20.1 (bug #419511)

  04 Jun 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.34

  02 Jun 2012; Sebastian Pipping <sping@gentoo.org> defaults/linuxrc:
  Support bind mounts from /etc/initramfs.mounts (bug #418463)

  02 Jun 2012; Sebastian Pipping <sping@gentoo.org> arch/x86/modules_load,
  arch/x86_64/modules_load, defaults/modules_load:
  Make sure that cbc.ko and aes*.ko needed for cbc-essiv:sha256 (=default) disk
  encryption are included with the initramfs (bug #416973)

  28 May 2012; Sebastian Pipping <sping@gentoo.org> gen_funcs.sh:
  Fix an e2fsprogs compilation leftover (bug #417095), reported by Juergen Rose

  17 May 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump to 3.4.33.1

  17 May 2012; Sebastian Pipping <sping@gentoo.org> defaults/linuxrc:
  Fix call to blkid as "blkid -l -t UUID=foo" (without -o device) does not seem
  to work well with blkid of util-linux

  17 May 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.33

  17 May 2012; Sebastian Pipping <sping@gentoo.org>
  -patches/e2fsprogs/1.42/e2fsprogs-1.41.12-getpagesize.patch, gen_compile.sh,
  gen_initramfs.sh, genkernel, genkernel.conf:
  Use blkid from system's util-linux rather than compiling e2fsprogs ourselves
