@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  01 Jul 2012; Sebastian Pipping <sping@gentoo.org> gen_configkernel.sh,
+  gen_package.sh:
+  Support --kernel-config=/proc/config.gz (bug #421027)
+
   11 Jun 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
   Bump version to 3.4.36
 
